--- a/src/resources/lang/codes.json
+++ b/src/resources/lang/codes.json
@@ -10,5 +10,13 @@
   "USER_CREATED": {
     "code": 3001,
     "message": "User successfully registered"
+  },
+  "USER_LOGGED_IN_WITH_GOOGLE": {
+    "code": 3002,
+    "message": "User successfully logged in with Google"
+  },
+  "GOOGLE_AUTH_FAILED": {
+    "code": 2002,
+    "message": "Google authentication failed"
   }
 }
