--- a/src/resources/lang/codes.json
+++ b/src/resources/lang/codes.json
@@ -18,5 +18,9 @@
   "GOOGLE_AUTH_FAILED": {
     "code": 2002,
     "message": "Google authentication failed"
+  },
+  "TOO_MANY_REQUESTS": {
+    "code": 4001,
+    "message": "Too many requests. Please try again later."
   }
 }
