--- a/src/resources/lang/codes.json
+++ b/src/resources/lang/codes.json
@@ -7,6 +7,10 @@
     "code": 2001,
     "message": "Database error"
   },
+  "EMAIL_ALREADY_VERIFIED": {
+    "code": 2002,
+    "message": "The email address is already verified"
+  },
   "USER_CREATED": {
     "code": 3001,
     "message": "User successfully registered"
@@ -14,6 +18,18 @@
   "USER_LOGGED_IN_WITH_GOOGLE": {
     "code": 3002,
     "message": "User successfully logged in with Google"
+  },
+  "USER_FETCHED": {
+    "code": 3003,
+    "message": "User information retrieved successfully"
+  },
+  "VERIFICATION_LINK_SENT": {
+    "code": 3004,
+    "message": "Verification link has been sent to your email address"
+  },
+  "EMAIL_VERIFIED": {
+    "code": 3005,
+    "message": "Email address successfully verified"
   },
   "GOOGLE_AUTH_FAILED": {
     "code": 2002,
